More efficient multi image docker setup